--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
         <section class="contact"id="contact">
             <h2 class="heading">Contact<span>ME!</span></h2>
 
-            <form action="#" name="submit-to-google-sheet">
+           <form action="https://api.web3forms.com/submit" method="POST">
+
+    <input type="hidden" name="access_key" value="cbc88ee7-ef1f-4d93-8ce6-1254d796f4de">
+
                 <div class="input-box">
                     <input type="text" name="Name" placeholder="Full Name">
                     <input type="email" name="Email Address" placeholder="Email Address">
