--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                     <input type="text"name="Email Subject" placeholder="Email Subject">
                 </div>
                 <textarea name="Your Message" id="" cols="30" rows="10"placeholder="Your Message"></textarea>
-                <input type="submit" value="Send Message"class="btn">
+                 <input type="hidden" name="redirect" value="https://web3forms.com/success">
+    <button type="submit">Submit Form</button>
             </form>
             <span id="msg"></span>
         </section>
@@ -154,7 +155,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
         <script src="script.js"></script>
-        <script>
+<!--         <script>
             const scriptURL = 'https://script.google.com/macros/s/AKfycbzFPVGxI-75Ilkm2z_EMuI9ubPlp8-7dQmMzzdPiIunLPPzj3bcY1ohMdT_DfZ3zPwhTA/exec'
             const form = document.forms['submit-to-google-sheet']
             const msg=document.getElementById("msg")
@@ -171,7 +172,7 @@
                 })
                 .catch(error => console.error('Error!', error.message))
             })
-          </script>
+          </script> -->
         
     </body>
 </html>
