--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <textarea name="Your Message" id="" cols="30" rows="10"placeholder="Your Message"></textarea>
                  <input type="hidden" name="redirect" value="https://web3forms.com/success">
-    <button type="submit">Submit Form</button>
+    <button type="submit" class="btn">Submit Form</button>
             </form>
             <span id="msg"></span>
         </section>
