--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="https://www.instagram.com/h_p__official/"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.linkedin.com/in/harsh-prajapati13/"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
-                <a href="Harsh PrajapatiResume.pdf" class="btn">Download CV</a>
+                <a href="Harshkumar-Prajapati-vapt.pdf" class="btn">Download CV</a>
             </div>
             
         </section>
